[gd_scene load_steps=5 format=2]

[ext_resource path="res://Symetrize.gd" type="Script" id=1]
[ext_resource path="res://WalkLine.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/UbuntuMono_Nerd_Font_Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[node name="Symetrize" type="Node"]
script = ExtResource( 1 )

[node name="Axis" type="Line2D" parent="."]
position = Vector2( 500, 0 )
points = PoolVector2Array( 0, 0, 0, 600 )
width = 1.0
default_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="OriginalLine" parent="." instance=ExtResource( 2 )]

[node name="SymetricLine" type="Line2D" parent="."]
width = 5.0

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Buttons"]
margin_right = 96.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "DÃ‰MARRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="Buttons"]
margin_left = 100.0
margin_right = 160.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "STOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearButton" type="Button" parent="Buttons"]
margin_left = 164.0
margin_right = 260.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "EFFACER"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished" from="OriginalLine" to="." method="on_walk_line_finished"]
[connection signal="moved" from="OriginalLine" to="." method="on_walk_line_moved"]
[connection signal="pressed" from="Buttons/StartButton" to="." method="on_start_pressed"]
[connection signal="pressed" from="Buttons/ResetButton" to="." method="on_reset_pressed"]
[connection signal="pressed" from="Buttons/ClearButton" to="." method="on_clear_pressed"]
